# blink-test-game

./: .gitmodules  CMakeLists.txt  CopyAssets.cmake  README.md
assets/shaders/: color-light.glsl  default.glsl  directional-light.glsl  lamp.glsl  screen-texture.glsl  textured-flat.glsl
src/: PlayerComponent.cpp  PlayerComponent.h  main.cpp
